# Project-BRICS

./: .gitignore  .gitmodules  CONTRIBUTING.md  DEADJOE  README.md  out_file.npz  pyproject.toml  quickstart.py  requirements.txt  ros_brics
brics/: README.md  package.xml  setup.cfg  setup.py
brics/brics/: point_recording.py
brics/launch/: brics_core_launch.py
brics/msg/: BrickClassification.msg  BrickDetection.msg
brics/srv/: Yolo.srv
docs/: Introduction.md
models/001/: args.yaml  results.csv
models/0012/: args.yaml  results.csv
models/0013/: args.yaml  results.csv
models/0014/: args.yaml  results.csv
ros_brics/: .gitignore  CMakeLists.txt  README.md
ros_brics/.cache/clangd/index/: move_program.cpp.041F71D737E58342.idx
ros_brics/config/: tf2.json  waypoints.json
ros_brics/config/camera_calib/: IntrinsicMatrix.npz
ros_brics/config/camera_calib/FinalTransforms/: T_cam2gripper_Method_0.npz  T_cam2gripper_Method_1.npz  T_cam2gripper_Method_2.npz  T_cam2gripper_Method_3.npz  T_cam2gripper_Method_4.npz  T_cam2gripper_Method_5.npz  T_gripper2cam_Method_0.npz  T_gripper2cam_Method_1.npz  T_gripper2cam_Method_2.npz  T_gripper2cam_Method_3.npz  T_gripper2cam_Method_4.npz  T_gripper2cam_Method_5.npz
ros_brics/config/transforms/: TBase2EE_000.npz  TBase2EE_001.npz  TBase2EE_002.npz  TBase2EE_003.npz  TBase2EE_004.npz  TBase2EE_005.npz  TBase2EE_006.npz  TBase2EE_007.npz  TBase2EE_008.npz  TBase2EE_009.npz  TBase2EE_010.npz  TBase2EE_011.npz  TBase2EE_012.npz  TBase2EE_013.npz  TBase2EE_014.npz  TBase2EE_015.npz  TBase2EE_016.npz  TBase2EE_017.npz  TBase2EE_018.npz  TBase2EE_019.npz  TBase2EE_020.npz  TBase2EE_021.npz  TBase2EE_022.npz  TBase2EE_023.npz
ros_brics/include/ros_brics/: eigen_json.hpp
ros_brics/launch/: brics.launch
ros_brics/scripts/: joint_transform_printer.py  point_recording.py  tf_listener.py
ros_brics/src/: move_program.cpp
runs/obb/train/: args.yaml
runs/obb/train2/: args.yaml  results.csv
src/3D_Scan/: realsense.py  scan.py  test.ply  view.py
src/BlenderProc/: Annotate.py  Demo.py  Generate.py  GenerateV2.py  log.txt  run_gen.sh
src/BlenderProc/Annotations/: AnnotateV2.py
src/BlenderProc/blender_files/: SingleBrick_Environment.blend  SingleBrick_Environment_temp.blend  SingleBrick_Environment_temp.blend1
src/Bricks_detector/: Brick_detector_first_training with_10epochs.txt  config.yaml  main.py  predict.py
src/Bricks_detector/data/labels/: train.cache
src/Bricks_detector/data/labels/train/: image_1.txt  image_10.txt  image_11.txt  image_12.txt  image_13.txt  image_14.txt  image_15.txt  image_16.txt  image_17.txt  image_18.txt  image_19.txt  image_2.txt  image_20.txt  image_21.txt  image_22.txt  image_23.txt  image_24.txt  image_25.txt  image_26.txt  image_27.txt  image_28.txt  image_29.txt  image_3.txt  image_30.txt  image_31.txt  image_32.txt  image_33.txt  image_34.txt  image_35.txt  image_36.txt  image_37.txt  image_38.txt  image_39.txt  image_4.txt  image_40.txt  image_41.txt  image_5.txt  image_6.txt  image_7.txt  image_8.txt  (+1 more)
src/Bricks_detector/runs/detect/train/: args.yaml  events.out.tfevents.1713430870.LAPTOP-TP1TU12F.8516.0  results.csv
src/Bricks_detector/runs/detect/train2/: args.yaml  events.out.tfevents.1713431381.LAPTOP-TP1TU12F.22376.0  results.csv
src/Bricks_detector/runs/detect/train3/: args.yaml  events.out.tfevents.1713780250.LAPTOP-TP1TU12F.25740.0  results.csv
src/Bricks_detector/runs/detect/train4/: args.yaml  (+2 more)
src/Robodk/: main.py
src/camera_scripts/: aruco_detect.py
src/capture_images/: augment.py  cam_script.py  remove.py
src/sam-meta/: README.md  bbox.py  benchmark.py  boundingBox.py  initialTesting.py  sizeTest.py
src/sam-meta/results/: benchmark_timings.txt
src/yolo/: capture.py  edge_detections.py  predict.py  run_train.sh  test.py  train.py  trainV2.py
src/yolo/obb/train/: args.yaml  results.csv
(+11 files in other folders)
