[tool.poetry]
name = "brics"
version = "0.1.0"
package-mode = false
description = "brick reusablity and intelligent classifcation system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
torch = "^2.3.0"
torchvision = "^0.18.0"
opencv-python = "^4.9.0.80"
supervision = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
